test/compile_errors/stage1/obj/ignored_comptime_value.zig
export fn foo() void {
    comptime 1;
}

// ignored comptime value
//
// tmp.zig:2:5: error: expression value is ignored
